--- a/.github/workflows/docker_build_python.yml
+++ b/.github/workflows/docker_build_python.yml
@@ -19,4 +19,4 @@ jobs:
 
             - name: Build Image
                 run: docker build -t python:api -f python_api.Dockerfile .
-              working-directory: docker
+              working-directory: python
