--- a/.github/workflows/docker_build_nodejs.yml
+++ b/.github/workflows/docker_build_nodejs.yml
@@ -19,4 +19,4 @@ jobs:
 
             - name: Build Image
                 run: docker build -t nodejs:api -f nodejs_api.Dockerfile .
-              working-directory: docker
+              working-directory: nodejs
