--- a/.github/workflows/docker_build_java.yml
+++ b/.github/workflows/docker_build_java.yml
@@ -18,5 +18,5 @@ jobs:
               uses: docker/setup-buildx-action@v2
 
             - name: Build Image
-                run: docker build -t java:api -f java_api.Dockerfile .
+                run: docker build -t java:api -f Dockerfile .
               working-directory: java
