--- a/.github/workflows/docker_build_java.yml
+++ b/.github/workflows/docker_build_java.yml
@@ -1,4 +1,4 @@
-name: Docker Image java api
+name: Docker Image
 
 on:
     push:
@@ -18,5 +18,5 @@ jobs:
               uses: docker/setup-buildx-action@v2
 
             - name: Build Image
-                run: docker build -t java:api -f Dockerfile .
-              working-directory: java
+              run: docker build -t java:api -f Dockerfile .
+              working-directory: docker
