--- a/.github/workflows/docker_build_nodejs.yml
+++ b/.github/workflows/docker_build_nodejs.yml
@@ -18,5 +18,5 @@ jobs:
               uses: docker/setup-buildx-action@v2
 
             - name: Build Image
-              run: docker build -t nodejs:api -f Dockerfile .
+              run: docker build -t nodejs:api -f nodejs_api.Dockerfile .
               working-directory: node.js
