--- a/.github/workflows/docker_build_python.yml
+++ b/.github/workflows/docker_build_python.yml
@@ -18,5 +18,5 @@ jobs:
               uses: docker/setup-buildx-action@v2
 
             - name: Build Image
-              run: docker build -t python:api -f Dockerfile .
+              run: docker build -t python:api -f python_api.Dockerfile .
               working-directory: python
